# creator-club

./: .gitattributes  README.md
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/scripts/: resync_tier_products.py  seed.py  sync_tier_prices.py
backend/src/backend/: __init__.py  billing.py  config.py  db.py  entitlements.py  main.py  stripe_client.py
backend/src/backend/api/: __init__.py
backend/src/backend/api/auth/: __init__.py  main.py
backend/src/backend/auth/: __init__.py  router.py
backend/src/backend/billing/: __init__.py  router.py  service.py
backend/src/backend/demo/: __init__.py  identity.py  service.py
backend/src/backend/health/: __init__.py  router.py
backend/src/backend/membership/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/backend/post/: models.py  repository.py  router.py  schemas.py  service.py
backend/src/backend/tier/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/backend/user/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/backend/webhooks/: __init__.py  models.py  repository.py  router.py  service.py
backend/tests/: conftest.py  test_billing_router.py  test_demo_router.py  test_demo_service.py  test_entitlements.py  test_health.py  test_membership_repository.py  test_membership_router.py  test_membership_service.py  test_post_repository.py  test_post_router.py  test_post_service.py  test_tier_repository.py  test_tier_router.py  test_tier_service.py  test_user_repository.py  test_user_router.py  test_user_service.py  test_webhooks.py
frontend/: .prettierignore  CLAUDE.md  README.md  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json
frontend/.claude/: settings.json
frontend/.husky/: pre-commit
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/lib/: brand.ts
frontend/src/: App.tsx
frontend/types/: creator.ts  post.ts  (+3 more)
(+117 files in other folders)
