[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RealNickTriano", email = "nicholastriano1999@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
backend = "backend:serve"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
