[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RealNickTriano", email = "nicholastriano1999@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "fastapi-sso>=0.21.0",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
backend = "backend:serve"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
